projectyaml/nginx-2c 통합.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-sign-2c
  labels:
    sign: sign-app-2c
spec:
  replicas: 2
  selector:
    matchLabels:
      sign: sign-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        sign: sign-app-2c
    spec:
      containers:
      - image: nginx:latest
        name: sign
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: pvcsign
          mountPath: /opt/tomcat/webapps/ROOT
      volumes:
      - name: pvcsign
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        sign: sign-app-2a

---

apiVersion: v1
kind: Service
metadata:
  name: sign-svc
spec:
  selector:
    sign: sign-app-2c
  type: NodePort
  clusterIP: 10.100.100.2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-main-2c
  labels:
    main: main-app-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      main: main-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        main: main-app-2c
    spec:
      containers:
      - image: nginx:latest
        name: main
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: pvcmain
          mountPath: /opt/tomcat/webapps/ROOT
      volumes:
      - name: pvcmain
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        main: main-app-2c

---

apiVersion: v1
kind: Service
metadata:
  name: main-svc
spec:
  selector:
    main: main-app-2c
  type: NodePort
  clusterIP: 10.100.100.1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-login-2c
  labels:
    login: login-app-2c
spec:
  replicas: 2
  selector:
    matchLabels:
      login: login-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        login: login-app-2c
    spec:
      containers:
      - image: nginx:latest
        name: login
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: pvclogin
          mountPath: /opt/tomcat/webapps/ROOT
      volumes:
      - name: pvclogin
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        login: login-app-2c

---

apiVersion: v1
kind: Service
metadata:
  name: login-svc
spec:
  selector:
    login: login-app-2c
  type: NodePort
  clusterIP: 10.100.100.3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-cart-2c
  labels:
    cart: cart-app-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      cart: cart-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
       cart: cart-app-2c
    spec:
      containers:
      - image: nginx:latest
        name: cart
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        volumeMounts:
        - name: pvccart
          mountPath: /opt/tomcat/webapps/ROOT
      volumes:
      - name: pvccart
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
       cart: cart-app-2c

---

apiVersion: v1
kind: Service
metadata:
  name: cart-svc
spec:
  selector:
    cart: cart-app-2c
  type: NodePort
  clusterIP: 10.100.100.4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
