projectyaml/nginx-2c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-main-2c
  namespace: ap
  labels:
    main: main-app-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      main: main-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        main: main-app-2c
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/main:v1.3
        name: main
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvcmain
          mountPath: /data/nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: pvcmain
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        main: main-app-2c

---
apiVersion: v1
kind: Service
metadata:
  name: main-svc
  namespace: ap
spec:
  selector:
    main: main-app-2c
  type: NodePort
  clusterIP: 172.20.10.1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-login-2c
  namespace: ap
  labels:
    login: login-app-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      login: login-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        login: login-app-2c
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/login:v1.3
        name: login
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvclogin
          mountPath: /data/nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: pvclogin
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        login: login-app-2c

---
apiVersion: v1
kind: Service
metadata:
  name: login-svc
  namespace: ap
spec:
  selector:
    login: login-app-2c
  type: NodePort
  clusterIP: 172.20.10.3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-cart-2c
  namespace: ap
  labels:
    cart: cart-app-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      cart: cart-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        cart: cart-app-2c
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/cart:v1.3
        name: cart
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvccart
          mountPath: /data/nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: pvccart
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        cart: cart-app-2c

---
apiVersion: v1
kind: Service
metadata:
  name: cart-svc
  namespace: ap
spec:
  selector:
    cart: cart-app-2c
  type: NodePort
  clusterIP: 172.20.10.4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-sign-2c
  namespace: ap
  labels:
    sign: sign-app-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      sign: sign-app-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        sign: sign-app-2c
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/sign:v1.3
        name: sign
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvcsign
          mountPath: /data/nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: pvcsign
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        sign: sign-app-2c

---
apiVersion: v1
kind: Service
metadata:
  name: sign-svc
  namespace: ap
spec:
  selector:
    sign: sign-app-2c
  type: NodePort
  clusterIP: 172.20.10.2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
