projectyaml/nginx-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-cart-2a
  labels:
    cart: cart-app-2a
spec:
  replicas: 1
  selector:
    matchLabels:
      cart: cart-app-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        cart: cart-app-2a
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/cart:v1.3
        name: cart
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvccart
          mountPath: /data/tomcat
      volumes:
      - name: pvccart
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        cart: cart-app-2a

---

apiVersion: v1
kind: Service
metadata:
  name: cart-svc
spec:
  selector:
    cart: cart-app-2a
  type: NodePort
  clusterIP: 172.20.10.4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
