projectyaml/nginx-login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-login-2a
  namespace: ap
  labels:
    login: login-app-2a
spec:
  replicas: 3
  selector:
    matchLabels:
      login: login-app-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        login: login-app-2a
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/login:v1.3
        name: login
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvclogin
          mountPath: /data/nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10   
      volumes:
      - name: pvclogin
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        login: login-app-2a

---

apiVersion: v1
kind: Service
metadata:
  name: login-svc
  namespace: ap
spec:
  selector:
    login: login-app-2a
  type: NodePort
  clusterIP: 172.20.10.3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
