projectyaml/nginx-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-main-2a
  namespace: ap
  labels:
    main: main-app-2a
spec:
  replicas: 3
  selector:
    matchLabels:
      main: main-app-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        main: main-app-2a
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/main:v1.3
        name: main
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvcmain
          mountPath: /data/nginx
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10   
      volumes:
      - name: pvcmain
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
        main: main-app-2a

---
apiVersion: v1
kind: Service
metadata:
  name: main-svc
  namespace: ap
spec:
  selector:
    main: main-app-2a
  type: NodePort
  clusterIP: 172.20.10.1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
