projectyaml/nginx-sign.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-nginx-sign-2a
  namespace: ap
  labels:
    sign: sign-app-2a
spec:
  replicas: 1
  selector:
    matchLabels:
      sign: sign-app-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
       sign: sign-app-2a
    spec:
      containers:
      - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/sign:v1.3
        name: sign
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
          limits:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: pvcsign
          mountPath: /data/nginx
      volumes:
      - name: pvcsign
        persistentVolumeClaim:
          claimName: pvc-nginx
      nodeSelector:
       sign: sign-app-2a

---

apiVersion: v1
kind: Service
metadata:
  name: sign-svc
  namespace: ap
spec:
  selector:
    sign: sign-app-2a
  type: NodePort
  clusterIP: 172.20.10.2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
