projectyaml/tomcat-2a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-sign-2a
  labels:
    sign-was: sign-app-was-2a
spec:
  replicas: 1
  selector:
    matchLabels:
      sign-was: sign-app-was-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        sign-was: sign-app-was-2a
    spec:
      containers:
        - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/test:v1.3
          name: sign-was
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          volumeMounts:
            - name: pvcsign-was
              mountPath: /data/tomcat
      volumes:
        - name: pvcsign-was  # PersistentVolumeClaim 이름과 일치하도록 수정
          persistentVolumeClaim:
            claimName: pvc-was
      nodeSelector:
        sign-was: sign-app-was-2a

---

apiVersion: v1
kind: Service
metadata:
  name: sign-was-svc
spec:
  selector:
    sign-was: sign-app-was-2a
  type: ClusterIP
  clusterIP: 172.20.10.20
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-main-2a
  labels:
    main-was: main-app-was-2a
spec:
  replicas: 1
  selector:
    matchLabels:
      main-was: main-app-was-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        main-was: main-app-was-2a
    spec:
      containers:
        - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/test:v1.3
          name: main-was
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          volumeMounts:
            - name: pvcmain-was
              mountPath: /data/tomcat
      volumes:
        - name: pvcmain-was  # PersistentVolumeClaim 이름과 일치하도록 수정
          persistentVolumeClaim:
            claimName: pvc-was
      nodeSelector:
        main-was: main-app-was-2a

---

apiVersion: v1
kind: Service
metadata:
  name: main-was-svc
spec:
  selector:
    main-was: main-app-was-2a
  type: ClusterIP
  clusterIP: 172.20.10.10
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-login-2a
  labels:
    login-was: login-app-was-2a
spec:
  replicas: 1
  selector:
    matchLabels:
      login-was: login-app-was-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        login-was: login-app-was-2a
    spec:
      containers:
        - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/test:v1.3
          name: login-was
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          volumeMounts:
            - name: pvclogin-was
              mountPath: /data/tomcat
      volumes:
        - name: pvclogin-was  # PersistentVolumeClaim 이름과 일치하도록 수정
          persistentVolumeClaim:
            claimName: pvc-was
      nodeSelector:
        login-was: login-app-was-2a

---

apiVersion: v1
kind: Service
metadata:
  name: login-was-svc-2a
spec:
  selector:
    login-was: login-app-was
  type: ClusterIP
  clusterIP: 172.20.10.30
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-cart-2a
  labels:
     cart-was: cart-app-was-2a
spec:
  replicas: 1
  selector:
    matchLabels:
       cart-was: cart-app-was-2a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
         cart-was: cart-app-was-2a
    spec:
      containers:
        - image: 730335352888.dkr.ecr.ap-northeast-2.amazonaws.com/test:v1.3
          name: cart-was
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          volumeMounts:
            - name: pvccart-was
              mountPath: /data/tomcat
      volumes:
        - name: pvccart-was  # PersistentVolumeClaim 이름과 일치하도록 수정
          persistentVolumeClaim:
            claimName: pvc-was
      nodeSelector:
         cart-was: cart-app-was-2a

---

apiVersion: v1
kind: Service
metadata:
  name: cart-was-svc
spec:
  selector:
     cart-was: cart-app-was-2a
  type: ClusterIP
  clusterIP: 172.20.10.40
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
