projectyaml/tomcat-2c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-sign-2c
  labels:
    sign-was: sign-app-was-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      sign-was: sign-app-was-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        sign-was: sign-app-was-2c
    spec:
      containers:
        - image: jinwoo0824/tomcat:v1.4
          name: sign-was
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          volumeMounts:
            - name: pvcsign-was
              mountPath: /opt/tomcat/webapps/ROOT
      volumes:
        - name: pvcsign-was
          persistentVolumeClaim:
            claimName: pvc-was
      nodeSelector:
        sign-was: sign-app-was-2c

---

apiVersion: v1
kind: Service
metadata:
  name: sign-was-svc
spec:
  selector:
    sign-was: sign-app-was-2c
  type: ClusterIP
  clusterIP: 10.100.200.2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-main-2c
  labels:
    main-was: main-app-was-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      main-was: main-app-was-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        main-was: main-app-was-2c
    spec:
      containers:
        - image: jinwoo0824/tomcat:v1.4
          name: main-was
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          volumeMounts:
            - name: pvcmain-was
              mountPath: /opt/tomcat/webapps/ROOT
      volumes:
        - name: pvcmain-was
          persistentVolumeClaim:
            claimName: pvc-was
      nodeSelector:
        main-was: main-app-was-2c

---

apiVersion: v1
kind: Service
metadata:
  name: main-was-svc
spec:
  selector:
    main-was: main-app-was-2c
  type: ClusterIP
  clusterIP: 10.100.200.1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-login-2c
  labels:
    login-was: login-app-was-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      login-was: login-app-was-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        login-was: login-app-was-2c
    spec:
      containers:
        - image: jinwoo0824/tomcat:v1.4
          name: login-was
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 400Mi
              cpu: 400m
            limits:
              memory: 400Mi
              cpu: 400m
          volumeMounts:
            - name: pvclogin-was
              mountPath: /opt/tomcat/webapps/ROOT
      volumes:
        - name: pvclogin-was
          persistentVolumeClaim:
            claimName: pvc-was
      nodeSelector:
        login-was: login-app-was-2c

---

apiVersion: v1
kind: Service
metadata:
  name: login-was-svc-2c
spec:
  selector:
    login-was: login-app-was-2c
  type: ClusterIP
  clusterIP: 10.100.200.3
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-tomcat-cart-2c
  labels:
    cart-was: cart-app-was-2c
spec:
  replicas: 3
  selector:
    matchLabels:
      cart-was: cart-app-was-2c
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        cart-was: cart-app-was-2c
    spec:
      containers:
        - image: jinwoo0824/tomcat:v1.4
          name: cart-was
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
